# layermeld

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
hack/: prepare_images.sh
specs/: 00-project-structure.md  01-input-formats.md  02-tar-handling.md  03-squashing.md  04-file-identity.md  05-deduplication.md  06-timestamp-normalization.md  07-layer-assembly.md  08-image-config-and-manifest.md  09-output-format.md  10-cli.md  11-determinism.md  99-backburner.md  README.md
src/: cli.rs  config.rs  docker_manifest.rs  error.rs  identity.rs  lib.rs  logging.rs  main.rs  run.rs  summary.rs  timestamp.rs
src/assemble/: digest.rs  emit.rs  mod.rs  verify.rs
src/dedup/: colocate.rs  dissolve.rs  membership.rs  mod.rs  partition.rs  stack.rs
src/input/: dir_transport.rs  docker_archive.rs  mod.rs  model.rs  oci_layout.rs
src/oci/: config.rs  index.rs  manifest.rs  mod.rs  platform_check.rs  validate.rs
src/output/: collision.rs  dir.rs  mod.rs  tar.rs
src/squash/: apply.rs  hardlink.rs  index.rs  mod.rs
src/tar_io/: compression.rs  layer_cache.rs  mod.rs  pax.rs  reader.rs  reopen.rs  writer.rs
tests/: determinism.rs  exit_codes.rs  fs_verify.rs  podman_round_trip.rs  round_trip.rs  synthetic_fixture.rs
tests/support/: fs_verify.rs  mod.rs  synthetic.rs
